# bayes-execution-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  app.py  demo.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bayes-engine/: bayes_engine.py
bayesian_engine/: bayes_engine.py
core/: graph.py  json_utils.py  llm.py  schemas.py  signals.py  state.py  telemetry.py
docs/: BAYESIAN_DESIGN.md  EXECUTION_MODEL.md  SCALING.md  SYSTEM_DESIGN.md
mcp_server/: server.py
nodes/: executor.py  llm_executor.py  planner.py  replanner.py
persistence/: __init__.py  checkpointer.py  job_store.py
scaling/: latent_bayes.py
service/: __init__.py  api.py
templates/: index.html
tests/: test_bayes.py  test_e2e.py  test_json_utils.py  test_llm_executor.py  test_persistence.py  test_scaling.py  test_signals.py
